cert-manager/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-nginx-vs
spec:
  gateways:
  - example-gateway
  hosts:
  - api-gateway-pvt.rpolnx.com.br
  http:
  - name: "nginx-v1-router"
    # match:
    # - uri:
    #     prefix: "/nginx"
    # rewrite:
    #   uri: "/"
    route:
    - destination:
        host: nginx
        port:
          number: 80
        # subset: v1
